CAUSEWAY-2297: minor technical dept.